--- a/PruebaBluetooth.css
+++ b/PruebaBluetooth.css
@@ -1,7 +1,7 @@
 .knob{
     width: 104px; 
     height: 66px; 
-    position: absolute; 
+    /*position: absolute; */
     vertical-align: middle; 
     margin-top: 66px; 
     margin-left: -152px; 
@@ -19,4 +19,8 @@
     -webkit-appearance: none;
     background-position: initial;
     background-repeat: initial;
+}
+
+#plantillas{
+    display:none;
 }
